# ocd-computer-marketplace

./: .gitignore  AGENTS.md  OCD_Windows_Theme_Skill_计划书.md  README.md  pyproject.toml
.agents/plugins/: marketplace.json
docs/: architecture.md  testing.md
docs/archive/2026-07-11/: 2026-07-11-codex-config-v1-adapter-design.md  2026-07-11-one-tone-core-implementation.md  2026-07-11-one-tone-footprint-cleanup-design.md  2026-07-11-one-tone-footprint-cleanup.md  2026-07-11-one-tone-skill-plugin-design.md  AGENTS-legacy.md  OCD_Windows_Theme_Skill_计划书-legacy.md  README-legacy.md
plugins/one-tone-windows/: README.md
plugins/one-tone-windows/skills/unify-windows-theme/: SKILL.md  pyproject.toml
plugins/one-tone-windows/skills/unify-windows-theme/agents/: openai.yaml
plugins/one-tone-windows/skills/unify-windows-theme/examples/: preview-request.md
plugins/one-tone-windows/skills/unify-windows-theme/references/: target-matrix.md  targets.md  workflow.md
plugins/one-tone-windows/skills/unify-windows-theme/scripts/: apply.ps1  preview.ps1  rollback.ps1  run_one_tone.py  verify.ps1
plugins/one-tone-windows/skills/unify-windows-theme/src/one_tone/: cli.py  palette.py  plan.py  storage.py  transaction.py
plugins/one-tone-windows/skills/unify-windows-theme/src/one_tone/adapters/: __init__.py  base.py  chrome.py  codex.py  file.py  terminal.py  vscode_family.py  windows.py
src/one_tone/: cli.py  palette.py  transaction.py
tests/: conftest.py  test_adapters.py  test_chrome_adapter.py  test_cli.py  test_codex_adapter.py  test_marketplace_package.py  test_palette.py  test_plan.py  test_plugin_package.py  test_project_smoke.py  test_terminal_adapter.py  test_transaction.py  test_vscode_family.py  test_windows_adapter.py
tests/marketplace/: test_marketplace.py
tests/plugins/: test_one_tone_windows_plugin.py
tests/skills/: test_unify_windows_theme_skill.py
(+41 files in other folders)
