[project]
name = "one-tone"
version = "0.1.0"
description = "A small, verifiable Windows theme workflow core"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
one-tone = "one_tone.cli:main"

[dependency-groups]
dev = ["pytest>=8.0,<9.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/one_tone"]

[tool.pytest.ini_options]
testpaths = ["tests"]
