[project]
name = "one-tone-marketplace-dev"
version = "0.1.0"
description = "Development harness for the One-Tone Windows plugin marketplace"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = ["pytest>=8.0,<9.0"]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["plugins/one-tone-windows/skills/unify-windows-theme/src"]
